--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     ],
     "require": {
         "oro/platform": "5.1.*",
-        "mongodb/mongodb": "^1.1",
-        "knplabs/knp-gaufrette-bundle": "~0.7.1"
+        "mongodb/mongodb": "1.15.*",
+        "knplabs/knp-gaufrette-bundle": "~0.8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.13"
